Updated z-index of edit-goal-dialog to make sure it appears above tooltips

--- a/web/src/stylesheets/components/_miwt-dialog.scss
+++ b/web/src/stylesheets/components/_miwt-dialog.scss
@@ -140,5 +140,15 @@ div.window.dialog /*specificity*/ {
 		//width: auto !important;
 
 	}
+	&.edit-goal-dialog {
+		z-index: 1090 !important;
+	}
+
+	.emailtemplate-config {
+		.recipient {
+			display: block;
+			margin-bottom: .5rem;
+		}
+	}
 
 }
